workflow/deploy/l4t/kustomize/base/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: jetson-l4t
  name: l4t
  labels:
    app: l4t
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: l4t
  type: LoadBalancer
  loadBalancerIP: 12.0.0.210
